--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -119,7 +119,7 @@
 
 <body>
     <div class="container">
-        <h1>☕ 커피 자판기 관리 시스템</h1>
+        <h1>☕ 커피 자판기 관리 시스템 2</h1>
 
         <div class="grid">
             <!-- 메뉴 조회 -->
